Fixed horizontal content overflow problem

--- a/app/styles/partials/_grid.scss
+++ b/app/styles/partials/_grid.scss
@@ -38,8 +38,15 @@
 
 #main-wrapper {
     height: 100%;
-    padding: 0;
     margin: 0;
+
+    /* 
+        Don't apply padding everywhere, or content will overflow horizontally!
+        
+        We're applying to the left side so that the navbar will be flush with
+        the sidemenu
+    */
+    padding-left: 0;
 }
 
 
