--- a/app/styles/partials/_layouts.scss
+++ b/app/styles/partials/_layouts.scss
@@ -4,7 +4,7 @@
 
 .content {
     z-index: 0;
-    padding: 20px 50px 0 50px;
+    padding: 20px 10px 0 30px;
 
     @media (max-width: $grid-float-breakpoint) {
         padding: 20px 0 0 0;
